internal/queryfile/testdata/invalid/duplicate_query_name.cypher
// name: FindPerson :one
MATCH (p:Person) WHERE p.id = $id RETURN p

// name: FindPerson :many
MATCH (p:Person) WHERE p.name = $name RETURN p
